Bug 423864 - Updated "Confirm Logout" setting not applied on logout until next login session
Summary: Updated "Confirm Logout" setting not applied on logout until next login session
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Lock/logout widget (other bugs)
Version First Reported In: 5.19.2
Platform: openSUSE Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-04 09:23 UTC by BingMyBong
Modified: 2022-07-29 22:34 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.20
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description BingMyBong 2020-07-04 09:23:22 UTC
SUMMARY
Changing "Confirm Logout" is not immediately active, you have to logout, log back in and then the confirmation change works as configured.

STEPS TO REPRODUCE
1. Login
2. run systemsettings5
3. Select "Startup and Shutdown"/Desktop Session
4. Change "Confirm Logout"
5. Logout acts if setting was not changed.
6. Log in
7. Logout - confirmation setting now works
OBSERVED RESULT


EXPECTED RESULT
Change the setting and the logout work correctly straight away. I would also expect just to see a "Are you sure Y/N" message before the desktop clears rather than another full screen of options when the setting is configure to ask for confirmation on logout

SOFTWARE/OS VERSIONS
opensuse:tumbleweed:20200701
Qt: 5.15.0 KDE Frameworks: 5.71.0 - KDE Plasma:  5.19.2 - kwin 5.19.2
kmail2 5.14.2 (20.04.2) - akonadiserver 5.14.2 (20.04.2) - Kernel:  5.7.5-1-default  - xf86-video-nouveau:  1.0.16
Comment 1 BingMyBong 2020-07-04 09:33:26 UTC
(In reply to BingMyBong from comment #0)
> SUMMARY
> Changing "Confirm Logout" is not immediately active, you have to logout, log
> back in and then the confirmation change works as configured.
> 
> STEPS TO REPRODUCE
> 1. Login
> 2. run systemsettings5
> 3. Select "Startup and Shutdown"/Desktop Session
> 4. Change "Confirm Logout"
> 5. Logout acts if setting was not changed.
> 6. Log in
> 7. Logout - confirmation setting now works
> OBSERVED RESULT
> 
> 
> EXPECTED RESULT
> Change the setting and the logout work correctly straight away. I would also
> expect just to see a "Are you sure Y/N" message before the desktop clears
> rather than another full screen of options when the setting is configure to
> ask for confirmation on logout
> 
> SOFTWARE/OS VERSIONS
> opensuse:tumbleweed:20200701
> Qt: 5.15.0 KDE Frameworks: 5.71.0 - KDE Plasma:  5.19.2 - kwin 5.19.2
> kmail2 5.14.2 (20.04.2) - akonadiserver 5.14.2 (20.04.2) - Kernel: 
> 5.7.5-1-default  - xf86-video-nouveau:  1.0.16

Also happens with logging out via the menu option
Comment 2 Bug Janitor Service 2020-07-07 08:43:43 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/140
Comment 3 David Edmundson 2020-07-07 16:29:59 UTC
Fixed for 5.20
Comment 4 Kamil Dudka 2021-01-31 14:24:14 UTC
After updating my Gentoo box to 5.20, the Log Out and Shut Down buttons in plasma stopped working.  They just cause plasma shell to crash.  After reverting the change mentioned in comment #2, the buttons work again.  A backtrace of the crash follows:

[KCrash Handler]
#4  0x00007f5e64871018 in KConfigBase::group(char const*) (this=0x0, str=str@entry=0x7f5e664a63f0 "General") at /var/tmp/portage/kde-frameworks/kconfig-5.78.0/work/kconfig-5.78.0/src/core/kconfigbase.cpp:43
#5  0x00007f5e6648ca91 in SessionBackend::confirmLogout() const (this=<optimized out>) at /var/tmp/portage/kde-plasma/libkworkspace-5.20.5/work/plasma-workspace-5.20.5/libkworkspace/sessionmanagementbackend.cpp:65
#6  0x00007f5e664896bd in SessionManagement::requestShutdown(SessionManagement::ConfirmationMode) (this=<optimized out>, confirmationMode=confirmationMode@entry=SessionManagement::ConfirmationMode::Default) at /var/tmp/portage/kde-plasma/libkworkspace-5.20.5/work/plasma-workspace-5.20.5/libkworkspace/sessionmanagement.cpp:129
#7  0x00007f5e399d3719 in SystemEntry::run(QString const&, QVariant const&) (actionId=<optimized out>, argument=<optimized out>, this=<optimized out>) at /var/tmp/portage/kde-plasma/plasma-workspace-5.20.5-r3/work/plasma-workspace-5.20.5/applets/kicker/plugin/systementry.cpp:364
#8  SystemEntry::run(QString const&, QVariant const&) (this=<optimized out>, actionId=<optimized out>, argument=<optimized out>) at /var/tmp/portage/kde-plasma/plasma-workspace-5.20.5-r3/work/plasma-workspace-5.20.5/applets/kicker/plugin/systementry.cpp:347
#9  0x00007f5e399d39f9 in SystemModel::trigger(int, QString const&, QVariant const&) (this=<optimized out>, row=<optimized out>, actionId=<optimized out>, argument=<optimized out>) at /var/tmp/portage/kde-plasma/plasma-workspace-5.20.5-r3/work/plasma-workspace-5.20.5/applets/kicker/plugin/systemmodel.cpp:83
#10 0x00007f5e3998d75c in SystemModel::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) (_c=QMetaObject::InvokeMetaMethod, _id=1, _a=0x7ffd1c740800, _o=<optimized out>) at applets/kicker/kickerplugin_autogen/7RBZBFH7CH/moc_systemmodel.cpp:84
#11 SystemModel::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=0x7ffd1c740800) at applets/kicker/kickerplugin_autogen/7RBZBFH7CH/moc_systemmodel.cpp:77
#12 0x00007f5e39991bb3 in SystemModel::qt_metacall(QMetaObject::Call, int, void**) (this=0x55fd0fc80400, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0x7ffd1c740800) at applets/kicker/kickerplugin_autogen/7RBZBFH7CH/moc_systemmodel.cpp:121
#13 0x00007f5e65a9b1ad in  () at /usr/lib64/libQt5Qml.so.5
#14 0x00007f5e65970d85 in  () at /usr/lib64/libQt5Qml.so.5
#15 0x00007f5e65972f07 in  () at /usr/lib64/libQt5Qml.so.5
#16 0x00007f5e65973d3b in QV4::QObjectMethod::callInternal(QV4::Value const*, QV4::Value const*, int) const () at /usr/lib64/libQt5Qml.so.5
Comment 5 BingMyBong 2021-02-01 08:52:49 UTC
(In reply to David Edmundson from comment #3)
> Fixed for 5.20

Hi,  i'm using 5.20.5 and its still not working.  i've tried removing the widget and reinstalling but its the same result, Logout = shutdown.
Comment 6 BingMyBong 2021-02-01 08:53:37 UTC
(In reply to BingMyBong from comment #5)
> (In reply to David Edmundson from comment #3)
> > Fixed for 5.20
> 
> Hi,  i'm using 5.20.5 and its still not working.  i've tried removing the
> widget and reinstalling but its the same result, Logout = shutdown.

SORRY... IGNORE THIS - ADDED IT TO THE WRONG BUG
Comment 7 Kamil Dudka 2022-07-29 22:34:59 UTC
(In reply to Kamil Dudka from comment #4)
> After updating my Gentoo box to 5.20, the Log Out and Shut Down buttons in
> plasma stopped working.  They just cause plasma shell to crash.  After
> reverting the change mentioned in comment #2, the buttons work again.

This was actually caused by bug #457285.