[libkworkspace] Watch ksmserverrc for changes

We only need to attach a watcher, that will do implicit reloading so
we'll have the right value when we call readEntry.

BUG: 423864